--- a/neat_vs_dqn_cartpole/configs/experiment.yaml
+++ b/neat_vs_dqn_cartpole/configs/experiment.yaml
@@ -13,16 +13,17 @@ logging:
   video_episode_limit: 1
 
 dqn:
-  learning_rate: 0.0001
+  learning_rate: 0.00005          # ↓ smaller LR stabilizes Q updates
   gamma: 0.99
-  buffer_size: 50000
-  batch_size: 64
-  learning_starts: 1000
-  target_update_interval: 1000
+  buffer_size: 100000             # ↑ more diverse replay
+  batch_size: 128                 # ↑ smoother gradients
+  learning_starts: 5000           # ↑ fill buffer before learning
+  target_update_interval: 500     # ↓ more frequent target sync
   train_freq: 4
   gradient_steps: 1
-  exploration_fraction: 0.25
-  exploration_final_eps: 0.05
+  exploration_fraction: 0.20      # slightly faster decay
+  exploration_final_eps: 0.02     # less randomness at the end
+
 
 neat:
   pop_size: 150
